# Judger

./: .gitignore  CMakeLists.txt  __run.py  client.py  client_settings.json  compile.py  judge_core_test.py  main.py  monitor.py  server.py  test.py
nats/: test.py  test1.py  work_queue.py
output/: judge
problem/p0001/in/: p0001_3.in  p0001_4.in  p0001_5.in
src/: main.c  test.c
src/compare/: std_check.c  std_check.h
src/global/: global.c  global.h
src/judge/: child.c  child.h  run.c  run.h
src/limit/: set_limit.c  set_limit.h
src/logger/: logger.c  logger.h
src/test/: submit.txt
test/: a.out  client.py  exec.py  fork_example  fork_example.c  java_code_test.c  judge_host.py  judge_pull.py  judge_server.py  pub_sub.py  publish.py  server.py  test1.py
tmp/: Main.java  p0001  p0001.c  p0001.go  p0001.py
